Fixed button text color on Safari

--- a/Website/rsc/style.css
+++ b/Website/rsc/style.css
@@ -345,7 +345,7 @@ a:hover {
         background: #EDEDED;
         border: 0.2em solid #2E2C2A;
         font-size: 2.6vw;
-
+        color: #2E2C2A;
     }
     #mobile-disclaimer
     {
